Issue 170: Aligned styles to user profile design

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -13,6 +13,10 @@ body{
   background-color: $background_color;
 }
 
+a:hover{
+  text-decoration: none;
+}
+
 .btn{
   font-size: .75rem;
   &.btn-light{
